Updating generated site files

--- a/src/en/newsite/causes.html
+++ b/src/en/newsite/causes.html
@@ -63,7 +63,7 @@
         <!-- Nav Bar Start -->
         <div class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
-                <a href="index.html" class="navbar-brand"><img src="/img/favicon.svg" height="50"> The Give Hub</a>
+                <a href="/index.html" class="navbar-brand"><img src="/img/favicon.svg" height="50"> The Give Hub</a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -84,7 +84,7 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Participate</a>
                             <div class="dropdown-menu">
-                                <a href="https://app.thegivehub.com/registration.html" class="dropdown-item">Signup</a>
+                                <a href="https://app.thegivehub.com/register.html" class="dropdown-item">Signup</a>
                                 <a href="https://app.thegivehub.com/browse.html" class="dropdown-item">Browse Campaigns</a>
                                 <a href="https://thegivehub.com/en/donate.html" class="dropdown-item">Donate Now</a>
                                 <a href="https://thegivehub.com/en/volunteer.html" class="dropdown-item">Become A Volunteer</a>
@@ -232,8 +232,8 @@
                             <p>Construction of a 5km water pipeline connecting remote villages to the main water supply, serving 2,500 residents and dramatically reducing water collection time for local families.</p>
                         </div>
                         <div class="causes-btn">
-                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=">Learn More</a>
-                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=">Donate Now</a>
+                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=65ee1a1b2f3a4b5c6d7e8f9a">Learn More</a>
+                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=65ee1a1b2f3a4b5c6d7e8f9a">Donate Now</a>
                         </div>
                     </div>                    <div class="causes-item">
                         <div class="causes-img">
@@ -255,8 +255,8 @@
                             <p>Construction of a permanent medical clinic serving 12 remote villages, powered by renewable energy and equipped with telemedicine capabilities.</p>
                         </div>
                         <div class="causes-btn">
-                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=">Learn More</a>
-                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=">Donate Now</a>
+                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=65ee1a1b2f3a4b5c6d7e8f9e">Learn More</a>
+                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=65ee1a1b2f3a4b5c6d7e8f9e">Donate Now</a>
                         </div>
                     </div>                    <div class="causes-item">
                         <div class="causes-img">
@@ -278,8 +278,8 @@
                             <p>Establishment of a demonstration farm and training facility to teach drought-resistant farming techniques to local farmers.</p>
                         </div>
                         <div class="causes-btn">
-                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=">Learn More</a>
-                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=">Donate Now</a>
+                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=65ee1a1b2f3a4b5c6d7e8fa0">Learn More</a>
+                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=65ee1a1b2f3a4b5c6d7e8fa0">Donate Now</a>
                         </div>
                     </div>                    <div class="causes-item">
                         <div class="causes-img">
@@ -301,8 +301,8 @@
                             <p>Construction of 6 new classrooms, computer lab, and modern facilities to improve education access for 300+ children.</p>
                         </div>
                         <div class="causes-btn">
-                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=">Learn More</a>
-                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=">Donate Now</a>
+                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=65ee1a1b2f3a4b5c6d7e8fa2">Learn More</a>
+                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=65ee1a1b2f3a4b5c6d7e8fa2">Donate Now</a>
                         </div>
                     </div>                    <div class="causes-item">
                         <div class="causes-img">
@@ -324,8 +324,8 @@
                             <p>Construction of 50 household sanitation facilities and implementation of community waste management system.</p>
                         </div>
                         <div class="causes-btn">
-                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=">Learn More</a>
-                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=">Donate Now</a>
+                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=65ee1a1b2f3a4b5c6d7e8fa4">Learn More</a>
+                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=65ee1a1b2f3a4b5c6d7e8fa4">Donate Now</a>
                         </div>
                     </div>                </div>
             </div>
