--- a/src/en/newsite/donate.html
+++ b/src/en/newsite/donate.html
@@ -63,7 +63,7 @@
         <!-- Nav Bar Start -->
         <div class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
-                <a href="index.html" class="navbar-brand"><img src="/img/favicon.svg" height="50"> The Give Hub</a>
+                <a href="/index.html" class="navbar-brand"><img src="/img/favicon.svg" height="50"> The Give Hub</a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -84,7 +84,7 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Participate</a>
                             <div class="dropdown-menu">
-                                <a href="https://app.thegivehub.com/registration.html" class="dropdown-item">Signup</a>
+                                <a href="https://app.thegivehub.com/register.html" class="dropdown-item">Signup</a>
                                 <a href="https://app.thegivehub.com/browse.html" class="dropdown-item">Browse Campaigns</a>
                                 <a href="https://thegivehub.com/en/donate.html" class="dropdown-item">Donate Now</a>
                                 <a href="https://thegivehub.com/en/volunteer.html" class="dropdown-item">Become A Volunteer</a>
@@ -128,7 +128,7 @@
         <!-- Donate Start -->
         <div class="donate" data-parallax="scroll" data-image-src="/site/img/donate.jpg">
             <div class="container">
-                <div class="row align-items-center">
+                <div class="row align-items-top">
                     <div class="col-lg-7">
                         <div class="donate-content">
                             <div class="section-header">
@@ -165,7 +165,7 @@
                                         <input type="radio" name="amount" value="100"> $100
                                     </label>
                                     <label class="btn btn-custom">
-                                        <input type="radio" name="amount"> Other
+                                        <input type="radio" name="amount" value="other"> Other
                                     </label>
                                  </div>
                                 <div>
