--- a/src/en/newsite/index.html
+++ b/src/en/newsite/index.html
@@ -63,7 +63,7 @@
         <!-- Nav Bar Start -->
         <div class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
-                <a href="index.html" class="navbar-brand"><img src="/img/favicon.svg" height="50"> The Give Hub</a>
+                <a href="/index.html" class="navbar-brand"><img src="/img/favicon.svg" height="50"> The Give Hub</a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -84,7 +84,7 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Participate</a>
                             <div class="dropdown-menu">
-                                <a href="https://app.thegivehub.com/registration.html" class="dropdown-item">Signup</a>
+                                <a href="https://app.thegivehub.com/register.html" class="dropdown-item">Signup</a>
                                 <a href="https://app.thegivehub.com/browse.html" class="dropdown-item">Browse Campaigns</a>
                                 <a href="https://thegivehub.com/en/donate.html" class="dropdown-item">Donate Now</a>
                                 <a href="https://thegivehub.com/en/volunteer.html" class="dropdown-item">Become A Volunteer</a>
@@ -383,8 +383,8 @@
                             <p>Construction of a 5km water pipeline connecting remote villages to the main water supply, serving 2,500 residents and dramatically reducing water collection time for local families.</p>
                         </div>
                         <div class="causes-btn">
-                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=">Learn More</a>
-                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=">Donate Now</a>
+                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=65ee1a1b2f3a4b5c6d7e8f9a">Learn More</a>
+                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=65ee1a1b2f3a4b5c6d7e8f9a">Donate Now</a>
                         </div>
                     </div>                    <div class="causes-item">
                         <div class="causes-img">
@@ -406,8 +406,8 @@
                             <p>Construction of a permanent medical clinic serving 12 remote villages, powered by renewable energy and equipped with telemedicine capabilities.</p>
                         </div>
                         <div class="causes-btn">
-                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=">Learn More</a>
-                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=">Donate Now</a>
+                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=65ee1a1b2f3a4b5c6d7e8f9e">Learn More</a>
+                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=65ee1a1b2f3a4b5c6d7e8f9e">Donate Now</a>
                         </div>
                     </div>                    <div class="causes-item">
                         <div class="causes-img">
@@ -429,8 +429,8 @@
                             <p>Establishment of a demonstration farm and training facility to teach drought-resistant farming techniques to local farmers.</p>
                         </div>
                         <div class="causes-btn">
-                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=">Learn More</a>
-                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=">Donate Now</a>
+                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=65ee1a1b2f3a4b5c6d7e8fa0">Learn More</a>
+                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=65ee1a1b2f3a4b5c6d7e8fa0">Donate Now</a>
                         </div>
                     </div>                    <div class="causes-item">
                         <div class="causes-img">
@@ -452,8 +452,8 @@
                             <p>Construction of 6 new classrooms, computer lab, and modern facilities to improve education access for 300+ children.</p>
                         </div>
                         <div class="causes-btn">
-                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=">Learn More</a>
-                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=">Donate Now</a>
+                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=65ee1a1b2f3a4b5c6d7e8fa2">Learn More</a>
+                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=65ee1a1b2f3a4b5c6d7e8fa2">Donate Now</a>
                         </div>
                     </div>                    <div class="causes-item">
                         <div class="causes-img">
@@ -475,8 +475,8 @@
                             <p>Construction of 50 household sanitation facilities and implementation of community waste management system.</p>
                         </div>
                         <div class="causes-btn">
-                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=">Learn More</a>
-                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=">Donate Now</a>
+                            <a class="btn btn-custom" href="https://app.thegivehub.com/campaign.html?id=65ee1a1b2f3a4b5c6d7e8fa4">Learn More</a>
+                            <a class="btn btn-custom" hfre="https://app.thegivehub.com/donatenow.html?id=65ee1a1b2f3a4b5c6d7e8fa4">Donate Now</a>
                         </div>
                     </div>                </div>
             </div>
@@ -484,7 +484,7 @@
         <!-- Causes End -->        <!-- Donate Start -->
         <div class="donate" data-parallax="scroll" data-image-src="/site/img/donate.jpg">
             <div class="container">
-                <div class="row align-items-center">
+                <div class="row align-items-top">
                     <div class="col-lg-7">
                         <div class="donate-content">
                             <div class="section-header">
@@ -521,7 +521,7 @@
                                         <input type="radio" name="amount" value="100"> $100
                                     </label>
                                     <label class="btn btn-custom">
-                                        <input type="radio" name="amount"> Other
+                                        <input type="radio" name="amount" value="other"> Other
                                     </label>
                                  </div>
                                 <div>
@@ -928,7 +928,88 @@
             </div>
         </div>
         <!-- Contact End -->
-        <!-- Footer Start -->
+        <!-- Blog Start -->
+        <div class="blog">
+            <div class="container">
+                <div class="section-header text-center">
+                    <p>Our Blog</p>
+                    <h2>Latest news & articles directly from our blog</h2>
+                </div>
+                <div class="row">                    <div class="col-lg-4">
+                        <div class="blog-item">
+                            <div class="blog-img">
+                                <img src="/img/blog-19.jpg" alt="Image">
+                            </div>
+                            <div class="blog-text">
+                                <h2><a href="/en/blog/wallet-to-impact.html">From Wallet to Impact</a></h2>
+                                <h3><a href="/en/blog/wallet-to-impact.html">The Journey of a Blockchain Donation</a></h3>
+                                <p>
+                                    <p>The act of giving is powerful, but with traditional donation methods,
+the journey from donor to recipient often feels like a black box. Where
+does the money go? How is it spent? These questions can create doubt,
+even for the most generous donors. Blockchain technology has changed
+that narrative, offering a clear, traceable path from wallet to impact.
+Let’s explore the journey of a blockchain donation and see how this
+innovative technology is revolutionizing philanthropy.</p>
+                                </p>
+                            </div>
+                            <div class="blog-meta">
+                                <p><i class="fa fa-user"></i><a href="#">Chris</a></p>
+                                <p><i class="fa fa-comments"></i><a href="#">0 Comments</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="blog-item">
+                            <div class="blog-img">
+                                <img src="/img/blog-3.jpg" alt="Image">
+                            </div>
+                            <div class="blog-text">
+                                <h2><a href="/en/blog/top-5-reasons-to-give.html">Support via Blockchain</a></h2>
+                                <h3><a href="/en/blog/top-5-reasons-to-give.html">Top 5 Reasons to Support Charities Through Blockchain Platforms</a></h3>
+                                <p>
+                                    <p>The world of charitable giving is evolving, and blockchain technology
+is at the forefront of this transformation. Blockchain platforms are
+revolutionizing how we support nonprofits, providing unprecedented
+transparency, efficiency, and global accessibility. If you’re
+considering donating to a cause, here are the top five reasons why using
+a blockchain platform is the way to go.</p>
+                                </p>
+                            </div>
+                            <div class="blog-meta">
+                                <p><i class="fa fa-user"></i><a href="#">Chris</a></p>
+                                <p><i class="fa fa-comments"></i><a href="#">0 Comments</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="blog-item">
+                            <div class="blog-img">
+                                <img src="/img/blog-15.jpg" alt="Image">
+                            </div>
+                            <div class="blog-text">
+                                <h2><a href="/en/blog/thegivehub-innovation.html">The Give Hub Platform</a></h2>
+                                <h3><a href="/en/blog/thegivehub-innovation.html">Bringing Innovation to Charitable Giving</a></h3>
+                                <p>
+                                    <p>Charitable giving has long been a cornerstone of social change,
+empowering individuals and organizations to make a difference in
+communities around the world. Yet, the traditional systems that support
+philanthropy are often riddled with inefficiencies, high costs, and a
+lack of transparency. Enter <strong>The Give Hub</strong>, a
+groundbreaking platform that leverages blockchain technology to
+revolutionize charitable giving.</p>
+                                </p>
+                            </div>
+                            <div class="blog-meta">
+                                <p><i class="fa fa-user"></i><a href="#">Chris</a></p>
+                                <p><i class="fa fa-comments"></i><a href="#">0 Comments</a></p>
+                            </div>
+                        </div>
+                    </div>
+ </div>
+            </div>
+        </div>
+        <!-- Blog End -->        <!-- Footer Start -->
         <div class="footer">
             <div class="container">
                 <div class="row">
