Fix typos discovered by codespell

--- a/architecture.html
+++ b/architecture.html
@@ -113,11 +113,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2>Techincal Architecture</h2>
+                        <h2>Technical Architecture</h2>
                     </div>
                     <div class="col-12">
                         <a href="">Home</a>
-                        <a href="">Techincal Architecture</a>
+                        <a href="">Technical Architecture</a>
                     </div>
                 </div>
             </div>
